# agents-ui

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package-lock.json  package.json
scripts/: generate_icons.py
src/: App.tsx  CommandPalette.tsx  SessionTerminal.tsx  SlidePanel.tsx  main.tsx  pathDisplay.ts  processEffects.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  file_manager.rs  files.rs  main.rs  persist.rs  pty.rs  recording.rs  secure.rs  ssh_fs.rs  tray.rs  vscode.rs
src/components/: CodeEditorPanel.tsx  FileExplorerPanel.tsx  Icon.tsx  ProjectsSection.tsx  QuickPromptsSection.tsx  SessionsSection.tsx
src/components/modals/: ConfirmDeleteProjectModal.tsx  NewSessionModal.tsx  PathPickerModal.tsx  PersistentSessionsModal.tsx  ProjectModal.tsx  SshManagerModal.tsx  UpdateModal.tsx
