[package]
name = "agents-ui"
version = "0.2.0"
description = "Agents UI desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
keyring = "2.3"
rand_core = "0.6"
portable-pty = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
